--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </button>
       <ul>
         <li><a href="https://lia.or.id/" target="_blank">BERANDA</a></li>
-        <li><a href="#tentang">TENTANG KAMI</a></li>
-        <li><a href="#unit">UNIT KEGIATAN</a></li>
-        <li><a href="#galeri">GALLERY</a></li>
-        <li><a href="#berita">BERITA</a></li>
-        <li><a href="#kontak">KONTAK</a></li>
+        <li><a href="https://lia.or.id/pengurus-lia" target="_blank">TENTANG KAMI</a></li>
+        <li><a href="https://lia.or.id/lembaga-bahasa-lia" target="_blank">Unit KEGIATAN</a></li>
+        <li><a href="https://lia.or.id/" target="_blank">GALLERY</a></li>
+        <li><a href="https://lia.or.id/#news" target="_blank">BERITA</a></li>
+        <li><a href="https://lia.or.id/#contact" target="_blank">KONTAK</a></li>
       </ul>
     </nav>
   </header>
@@ -74,10 +74,10 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="https://lia.or.id/" target="_blank">Home</a></li>
-          <li><a href="https://lia.or.id/tentang" target="_blank">Organisasi</a></li>
-          <li><a href="https://lia.or.id/unit" target="_blank">Unit Kegiatan</a></li>
-          <li><a href="https://lia.or.id/berita" target="_blank">Berita</a></li>
-          <li><a href="https://lia.or.id/kontak" target="_blank">Kontak</a></li>
+          <li><a href="https://lia.or.id/pengurus-lia" target="_blank">Organisasi</a></li>
+          <li><a href="https://lia.or.id/lembaga-bahasa-lia" target="_blank">Unit Kegiatan</a></li>
+          <li><a href="https://lia.or.id/#news" target="_blank">Berita</a></li>
+          <li><a href="https://lia.or.id/#contact" target="_blank">Kontak</a></li>
         </ul>
       </div>
 
